tests/error/find_type.gw
#! [contains] find parent
class C extends UserUGen {
  var D d;
}
